Added some basic layout and components

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3001",
     "build": "next build",
     "analyze": "ANALYZE=true next build",
     "start": "next start",
@@ -21,21 +21,41 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
+    "@hocuspocus/provider": "^1.0.0-beta.6",
     "@mantine/carousel": "5.8.3",
-    "@mantine/core": "5.8.3",
+    "@mantine/core": "^5.8.4",
     "@mantine/dates": "5.8.3",
-    "@mantine/hooks": "5.8.3",
+    "@mantine/form": "^5.8.4",
+    "@mantine/hooks": "^5.8.4",
     "@mantine/next": "5.8.3",
     "@mantine/notifications": "5.8.3",
     "@mantine/prism": "5.8.3",
+    "@mantine/tiptap": "^5.8.4",
     "@next/bundle-analyzer": "^12.3.1",
-    "@tabler/icons": "^1.107.0",
+    "@tabler/icons": "^1.114.0",
+    "@tiptap/extension-collaboration": "^2.0.0-beta.204",
+    "@tiptap/extension-collaboration-cursor": "^2.0.0-beta.204",
+    "@tiptap/extension-highlight": "^2.0.0-beta.204",
+    "@tiptap/extension-link": "^2.0.0-beta.204",
+    "@tiptap/extension-subscript": "^2.0.0-beta.204",
+    "@tiptap/extension-superscript": "^2.0.0-beta.204",
+    "@tiptap/extension-text-align": "^2.0.0-beta.204",
+    "@tiptap/extension-underline": "^2.0.0-beta.204",
+    "@tiptap/react": "^2.0.0-beta.204",
+    "@tiptap/starter-kit": "^2.0.0-beta.204",
     "cookies-next": "^2.1.1",
     "dayjs": "^1.11.6",
     "embla-carousel-react": "^7.0.3",
+    "iron-session": "^6.3.1",
     "next": "12.3.1",
+    "octokit": "^2.0.10",
+    "pocketbase": "^0.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "recoil": "^0.7.6",
+    "swr": "^1.3.0",
+    "y-protocols": "^1.0.5",
+    "yjs": "^13.5.43"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
